tests/errors/semantics/cannot_omit_arguments_for_non_constant_func_calls.odl
main :: () -> void {
    add :: (a: int, b := 0, c := 0) -> int {
        return a + b + c;
    };

    myadd := add;
    s := myadd(1,, 4);
    printint(s);
    println();
};
